--- a/DAY-02.ipynb
+++ b/DAY-02.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f4b0546d",
+   "metadata": {},
+   "source": [
+    "Task\n",
+    "---\n",
+    "Given the meal price (base cost of a meal), tip percent (the percentage of the meal price being added as tip), and tax percent (the percentage of the meal price being added as tax) for a meal, and print the meal's total cost. \n",
+    "Round the result to the nearest integer."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "id": "50cca090",
