--- a/DAY-01.ipynb
+++ b/DAY-01.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "029648dc",
+   "metadata": {},
+   "source": [
+    "Task\n",
+    "---\n",
+    "Complete the code in the editor below. The variables d , l,s and are already declared and initialized for you. \n",
+    "You must: Declare variables: one of type int, one of type double, and one of type String.\n",
+    "Read lines of input from stdin (according to the sequence given in the Input Format section below) and initialize your variables.\n",
+    "Use the operator to perform the following operations: Print the sum of plus your int variable on a new line.\n",
+    "Print the sum of plus your double variable to a scale of one decimal place on a new line.\n",
+    "Concatenate with the string you read as input and print the result on a new line."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "be32952b",
