--- a/DAY-08.ipynb
+++ b/DAY-08.ipynb
@@ -33,7 +33,10 @@
     "        else:\n",
     "            print(\"Not found\")\n",
     "    except EOFError:\n",
-    "        break"
+    "        break\n",
+    "        \n",
+    "        \n",
+    "        "
    ]
   },
   {
